--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.3.2",
+    "moment": "^2.22.1",
     "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
     "vue": "^2.5.2",
