--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "debug": "^2.6.3",
     "kcors": "^2.2.1",
     "koa": "^2.2.0",
