--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "kcors": "^2.2.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
+    "koa2-history-api-fallback": "0.0.5",
     "koa-json": "^2.0.2",
     "koa-logger": "^2.0.1",
     "koa-onerror": "^1.2.1",
