--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,11 @@
   "plugins": ["transform-vue-jsx", "transform-runtime", ["component", {
     "libraryName": "element-ui",
     "styleLibraryName": "theme-chalk"
-  }]]
+  }]],
+  "env": {
+    "test": {
+      "presets": ["env", "stage-2"],
+      "plugins": [ "istanbul" ]
+    }
+  }
 }
