--- a/package.json
+++ b/package.json
@@ -5,25 +5,42 @@
   "author": "BreezyMelon <935448078@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "client:dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run client:dev",
+    "server": "node ./server/bin/www",
+    "server:dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon ./server/bin/www",
+    "prd": "pm2 start ./server/bin/www",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "test": "cross-env NODE_ENV=test jest"
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit"
   },
   "git": "git@github.com:MrElvin/vue-koa-demo.git",
   "dependencies": {
     "element-ui": "^2.3.2",
     "moment": "^2.22.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "bcryptjs": "^2.4.3",
+    "debug": "^2.6.3",
+    "kcors": "^2.2.1",
+    "koa": "^2.2.0",
+    "koa-bodyparser": "^3.2.0",
+    "koa2-history-api-fallback": "0.0.5",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^2.0.1",
+    "koa-onerror": "^1.2.1",
+    "koa-router": "^7.1.1",
+    "koa-session": "^5.8.1",
+    "koa-static": "^3.0.0",
+    "koa-views": "^5.2.1",
+    "mongoose": "^5.0.13",
+    "pug": "^2.0.0-rc.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-jest": "^23.6.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -63,6 +80,7 @@
     "sass-loader": "^6.0.7",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "supertest": "^3.3.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
@@ -71,7 +89,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "nodemon": "^1.8.1"
   },
   "engines": {
     "node": ">= 6.0.0",
