--- a/.babelrc
+++ b/.babelrc
@@ -14,8 +14,10 @@
   }]],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": [ "istanbul" ]
+      "presets": [
+        ["env", { "targets": { "node": "current" }}],
+        "stage-2"
+      ]
     }
   }
 }
